--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ DJANGO_DEBUG=True
 DJANGO_DB_ENGINE=django.db.backends.mysql
 DJANGO_DB_NAME=smartqueue
 DJANGO_DB_USER=root
-DJANGO_DB_PASSWORD=tu_password
+DJANGO_DB_PASSWORD=""
 DJANGO_DB_HOST=localhost
 DJANGO_DB_PORT=3306
 DJANGO_DB_CHARSET=utf8mb4
