--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.11.0
 attrs==25.4.0
 Django==6.0
+django-filter==25.2
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 drf-spectacular==0.29.0
@@ -14,4 +15,5 @@ PyYAML==6.0.3
 referencing==0.37.0
 rpds-py==0.30.0
 sqlparse==0.5.4
+tzdata==2025.2
 uritemplate==4.2.0
