--- a/requirements.txt
+++ b/requirements.txt
@@ -46,3 +46,7 @@ uritemplate==4.2.0
 uvicorn==0.38.0
 watchfiles==1.1.1
 websockets==15.0.1
+
+# Deploy-time helpers
+whitenoise==6.5.0
+dj-database-url==1.0.0
